# bc-report-cards

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/report_card_generator/: __init__.py  config.py  feedback_improver.py  main.py  models.py
frontend/: index.html  package-lock.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CommentDisplay.jsx  CommentHistory.jsx  StudentForm.jsx
