[project]
name = "report-card-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "devin.m.bushey@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "openai>=1.84.0",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]

[project.scripts]
report-card-generator = "report_card_generator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
